--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Jaylon Russ</h1>
     <ul>
-        <li><a href="V" Pre Assesment </a></li>
+        <li><a href="pre-assesment/index.html">Pre-Assesment</a></li>
     </ul>
 </body>
 </html>
