--- a/pre-assesment/index.html
+++ b/pre-assesment/index.html
@@ -1,18 +1,21 @@
 <!doctype html>
 <html lang="en"
 <head>
+  <meta name="author" content="Jaylon Russ" /> 
+  <!--I am operating this-->
 <meta charset="UTF-8">
 <meta name="description" content="This is a skills pre-assessment for Mobile Web Development" />
-<title>IFSC 3342 Pre-Assessment</title>
+<link href=""
+<title>IFSC 3342 Pre-Assessment | Jaylon Russ</title>
 </head>
 <body>
 <div id="container">
   <div id="header">
-    <h1><a href="index.html">IFSC 3342 Pre-Assessment</a></h1>
+    <h1><a href="index.html">Jaylon Russ</a></h1>
   </div>
   <div id="nav">
     <ul>
-      <li><a href="http://ualr.edu">UALR</a></li>
+      <li><a href="http://ualr.edu" title="UA Little Rock">UALR</a></li>
       <li><a href="https://thomaswallace.net/course/mobile-web/spring-2018/">Course Homepage</a></li>
       <li><a href="http://www.w3.org/">W3C</a></li>
     </ul>
@@ -28,11 +31,13 @@
     <p>Answer goes here...</p>
     <h4>Please provide an example below of how to mark up a definition from the dictionary</h4>
     <p>Answer goes here...</p>
+  
     <h4>Provide an example of link pointing to your favorite site &amp; create a style rule to change the background color of the link when the user hovers over it. </h4>
+    
     <p>Answer goes here... </p>
   </div>
   <div id="footer">
-    <h6>Footer</h6>
+    <h6>&copy 2025| Jaylon Russ| <a href="#top">Back to Top</a></h6>
   </div>
 </div>
 </body>
