added semantic html assignment

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>Jaylon Russ</h1>
     <ul>
         <li><a href="pre-assesment/index.html">Pre-Assesment</a></li>
+        <li></li><a href="semantic-html/index.html">Semantic html assignment</a></li>
     </ul>
 </body>
 </html>
