made changes to resume

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <ul>
         <li><a href="pre-assesment/index.html">Pre-Assesment</a></li>
         <li></li><a href="semantic-html/index.html">Semantic html assignment</a></li>
+        <li><a href="resume-html/index.html">/Resume</a></li>
     </ul>
 </body>
 </html>
